GRPC Hello test service is integrated

--- a/ToDoListApi/appsettings.Development.json
+++ b/ToDoListApi/appsettings.Development.json
@@ -1,8 +1,10 @@
 {
   "UseMSSQL": false,
   "ConnectionStrings": {
-    "ApiDatabase_MSSQL": "Data Source=yourserver;Initial Catalog=yourDatabase;User ID=yourUser;Password=yourPassword;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False",
-    "ApiDatabase_PostgreSQL": "Server=yourserver;Database=yourDatabase;Port=yourPort;User Id=yourUser;Password=yourPassword;"
+    //"ApiDatabase_MSSQL": "Data Source=yourserver;Initial Catalog=yourDatabase;User ID=yourUser;Password=yourPassword;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False",
+    //"ApiDatabase_PostgreSQL": "Server=yourserver;Database=yourDatabase;Port=yourPort;User Id=yourUser;Password=yourPassword;"
+    "ApiDatabase_MSSQL": "Data Source=SRV2;Initial Catalog=ToDoList;User ID=sintez;Password=123123;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False",
+    "ApiDatabase_PostgreSQL": "Server=SRV2;Database=ToDoList;Port=5432;User Id=postgres;Password=Qw12345;"
   },
 
   "CurrentProjectUrlInIIS": "https://localhost:557",
