--- a/ToDoListApi/ToDoListApi.csproj
+++ b/ToDoListApi/ToDoListApi.csproj
@@ -14,6 +14,7 @@
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="13.0.1" />
     <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0" />
+    <PackageReference Include="Grpc.AspNetCore" Version="2.71.0" />
     <PackageReference Include="HigginsSoft.IdentityServer8" Version="8.0.4" />
     <PackageReference Include="HigginsSoft.IdentityServer8.AspNetIdentity" Version="8.0.4" />
     <PackageReference Include="HigginsSoft.IdentityServer8.EntityFramework" Version="8.0.4" />
@@ -48,6 +49,7 @@
   <ItemGroup>
     <ProjectReference Include="..\DAL\DAL.csproj" />
     <ProjectReference Include="..\ToDoListCore\ToDoListCore.csproj" />
+	<Protobuf Include="..\Protos\greet.proto" GrpcServices="Server" Link="Protos\greet.proto" />
   </ItemGroup>
 
   <ItemGroup>
