--- a/ToDoListBlazor/ToDoListBlazor.csproj
+++ b/ToDoListBlazor/ToDoListBlazor.csproj
@@ -14,13 +14,20 @@
     <Folder Include="Models\Auth\" />
   </ItemGroup>
 
-  <ItemGroup>
+  <ItemGroup>	
+	<PackageReference Include="Google.Protobuf" Version="3.30.2" />
+    <PackageReference Include="Grpc.Net.Client" Version="2.71.0" />
+    <PackageReference Include="Grpc.Tools" Version="2.71.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.21.2" />
     <PackageReference Include="Radzen.Blazor" Version="8.1.4" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\ToDoListCore\ToDoListCore.csproj" />
+    <Protobuf Include="..\Protos\greet.proto" GrpcServices="Client" Link="Protos\greet.proto" />
   </ItemGroup>
 
   <ItemGroup>
