--- a/ToDoListCore/ToDoListCore.csproj
+++ b/ToDoListCore/ToDoListCore.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
 	  <Protobuf Include="..\Protos\greet.proto" GrpcServices="Client" Link="Protos\greet.proto" />
+	  <Protobuf Include="..\Protos\todolist.proto" GrpcServices="Client" Link="Protos\todolist.proto" />
 	  <PackageReference Include="Google.Protobuf" Version="3.30.2" />
 	  <PackageReference Include="Grpc.Net.Client" Version="2.71.0" />
 	  <PackageReference Include="Grpc.Tools" Version="2.71.0">
